<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true"
        android:fitsSystemWindows="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/edge_dimen"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/fontBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/edge_dimen"
                    android:paddingVertical="@dimen/_10mdp"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_18font_mdp" />

                <LinearLayout
                    android:id="@+id/llReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:background="@drawable/bg_card8"
                    android:clickable="true"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36mdp"
                        android:layout_height="@dimen/_36mdp"
                        android:padding="@dimen/_10mdp"
                        android:src="@drawable/ic_report" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10mdp"
                        android:layout_weight="1"
                        android:text="@string/myReport"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/font12"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:background="@drawable/bg_card8"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36mdp"
                        android:layout_height="@dimen/_36mdp"
                        android:padding="@dimen/_10mdp"
                        android:src="@drawable/ic_feedback" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10mdp"
                        android:layout_weight="1"
                        android:text="@string/feedback"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/font12"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:background="@drawable/bg_card8"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36mdp"
                        android:layout_height="@dimen/_36mdp"
                        android:padding="@dimen/_10mdp"
                        android:src="@drawable/ic_share" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10mdp"
                        android:layout_weight="1"
                        android:text="@string/share"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/font12"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:background="@drawable/bg_card8"
                    android:clickable="true"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36mdp"
                        android:layout_height="@dimen/_36mdp"
                        android:padding="@dimen/_10mdp"
                        android:src="@drawable/ic_privacy" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10mdp"
                        android:layout_weight="1"
                        android:text="@string/privacyPolicy"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/font12"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20font_mdp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10mdp"
                        android:text="@string/app_version"
                        android:textAlignment="center"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/font12"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_6mdp"
                        android:text="v1.0.0"
                        android:textAlignment="center"
                        android:textColor="@color/textColorSecondery"
                        android:textSize="@dimen/font10" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
